# ogl-master

./: .gitignore  CMakeLists.txt
pg_dg/common/: GlobalData.cpp  GlobalData.h  ParticleSystem.cpp  ParticleSystem.h  Roller.cpp  Roller.h  Shader.cpp  Shader.h  Sphere.cpp  Texture.cpp  Texture.h  Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h
pg_dg/lab1/: lab1.cpp
pg_dg/lab1/shaders/: Basic.vert  Color.frag
pg_dg/lab2/: lab2.cpp
pg_dg/lab2/shaders/: Texture.frag  Texture.vert
pg_dg/lab3/: lab3.cpp
pg_dg/lab3/shaders/: Particle.vert
pg_dg/lab4/: lab4.cpp
pg_dg/lab4/shaders/multiTexture/: frag.shader  vertex.shader
pg_dg/lab4/shaders/simpleTexture/: frag.shader  vertex.shader
pg_dg/lab5/: lab5.cpp
pg_dg/lab5/shaders/: Basic.vert  Color.frag
tutorial02_red_triangle/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  tutorial02.cpp
